Temporarily set design like this, for 100vh, still bugged on Safari due to unwanted scrolling of mobile safari

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .content {
 	min-height: calc(100vh - 90px);
+	max-height: 100%;
 }
 
 .loading-spin {
